# libtagarray

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Pipfile  README.md  conanfile.txt  defines.csv  pyproject.toml
.github/workflows/: CI.yml
cmake/: CompilerFlagsSets.cmake  TargetCompileCheckAddFlags.cmake  defines.cmake  defines_generator.cmake
cmake/defines/: C.head.in  CXX.head.in  CXX.tail.in  Fortran.head.in  Fortran.tail.in
cmake/try_source/: assumed_size_polymorphic_objects.f90
include/: tagarray.fh  tagarray.h  tagarray.hpp
include/tagarray/: Container.hpp  PyRecordInfo.hpp  Record.hpp  RecordInfo.h  Utils.hpp  info.h  tagarray_v1.fh  tagarray_v2.fh  tagarray_v3.fh
include/tagarray/hidden/: Record.hpp
include/tagarray/private/: HRecord.hpp
source/: CMakeLists.txt  C_API.cpp  Container.cpp  Record.cpp  Utils.cpp
source/API/: CMakeLists.txt
source/API/Fortran/: CAPI.f90  CMakeLists.txt  Crecordinfo.f90  container.f90  record.f90  recordinfo.f90  tagarray.f90  utils.F90  utils.f90
source/API/Python/: CMakeLists.txt  CXXAPI.cpp
src/: container.rs  lib.rs  record.rs
tests/: CMakeLists.txt
tests/C/: CMakeLists.txt  test-api.c
tests/Cpp/: CMakeLists.txt  test-api.cpp  test-utils.cpp
tests/Fortran/: CMakeLists.txt  tagarray_assert.fh  test-container.F90  test-header-v1.F90  test-header-v2.F90  test-header-v3.F90  test-record.F90  test-recordinfo.F90  test-utils.F90
